--- a/src/app/complaints/complaints.component.scss
+++ b/src/app/complaints/complaints.component.scss
@@ -16,4 +16,13 @@
   .lst {
     box-shadow: 0 3px 3px -3px grey;
   }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
