--- a/src/app/components/complaint-dialog/complaint-dialog.component.scss
+++ b/src/app/components/complaint-dialog/complaint-dialog.component.scss
@@ -11,6 +11,10 @@
       display: inline-flex;
       align-items: center;
       justify-content: flex-end;
+
+      button {
+        zoom: 0.7;
+      }
     }
   }
 
