--- a/src/app/pando/users-list/users-list.component.html
+++ b/src/app/pando/users-list/users-list.component.html
@@ -63,10 +63,10 @@
               <mat-icon>person</mat-icon>
               <span>Ver usuario</span>
             </button>
-            <button mat-menu-item (click)="onAddUserPermissions(users._id)">
+            <!-- <button mat-menu-item (click)="onAddUserPermissions(users._id)">
               <mat-icon>add</mat-icon>
               <span>Agregar permisos</span>
-            </button>
+            </button> -->
           </mat-menu>
         </td>
       </ng-container>
