--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -19,12 +19,10 @@
         </button>
       </mat-form-field>
     </div>
-    <div class="set-8">&nbsp;</div>
   </div>
 
   <div class="set-12">
     <table mat-table [dataSource]="dataSource">
-
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
           <mat-checkbox (change)="$event ? toggleAllRows() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -37,23 +35,43 @@
           </mat-checkbox>
         </td>
       </ng-container>
+
       <ng-container matColumnDef="author">
         <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">
-          <span *ngIf="element?.createdBy?.firstname != null">{{ element?.createdBy?.firstname }}</span>
-          <span *ngIf="element?.createdBy?.firstname == null">Anónimo</span>
+          <small *ngIf="element?.createdBy != null">
+            {{ element?.createdBy?.firstname | titlecase }} {{ element?.createdBy?.lastname | titlecase }}
+          </small>
+          <small *ngIf="element?.createdBy == null">Anónimo</small>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Título</th>
-        <td mat-cell *matCellDef="let element">{{ element?.title || "NA" }}</td>
+        <td mat-cell *matCellDef="let element">
+          <small>{{ element?.name || "NA" }}</small>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="coverage">
+        <th mat-header-cell *matHeaderCellDef>Cobertura</th>
+        <td mat-cell *matCellDef="let element">
+          <button type="button" *ngIf="element['coverage'].length == 0" (click)="popCategorizePostsDialog(element)">
+            <small>Categorizar</small>
+          </button>
+          <mat-form-field appearance="outline" *ngIf="element['coverage'].length != 0">
+            <mat-label>Cobertura</mat-label>
+            <mat-select>
+              <mat-option *ngFor="let coverage of element['coverage']"></mat-option>
+            </mat-select>
+          </mat-form-field>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Alta</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | date : "mediumDate" }}
+          <small>{{ element.createdAt | date : "mediumDate" }} - {{ element.createdAt | date : "mediumTime" }}</small>
         </td>
       </ng-container>
 
