--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
   width: 100%;
   height: 100%;
   cursor: default;
-  background: #d4d4d4 !important;
+  background: #fafdfe !important;
   overflow-wrap: break-word;
 }
 
@@ -393,6 +393,14 @@ mat-form-field {
 .mat-paginator-container {
   * {
     margin: 0;
+  }
+
+  .mat-paginator-page-size-label {
+    margin-right: 10px;
+  }
+
+  .mat-paginator-range-actions {
+    margin-left: 20px;
   }
 }
 
