college marathon building

--- a/src/app/college-marathon/college-marathon.component.html
+++ b/src/app/college-marathon/college-marathon.component.html
@@ -1,1 +1,13 @@
-<div class="set-12 innrpg"></div>
+<div class="set-12">
+  <div class="innrpg">
+    <img src="../../assets/images/txt-marathon.png" alt="" class="coverimg">
+    <div class="set-12 ctrls">
+      <button type="button" mat-raised-button color="accent">
+        <strong>Crear equipo</strong>
+      </button>
+      <button type="button" mat-raised-button color="accent" (click)="utilityService.linkMe('/universidades/registro')">
+        <strong>Acceder</strong>
+      </button>
+    </div>
+  </div>
+</div>
