--- a/src/app/college-marathon/college-marathon.component.scss
+++ b/src/app/college-marathon/college-marathon.component.scss
@@ -3,4 +3,35 @@
   height: 100vh;
   background: #00031d;
   padding-top: 80px;
+
+  .innrpg {
+    width: 70%;
+
+    .flx {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  .coverimg {
+    width: 100%;
+    height: auto;
+    float: left;
+  }
+
+  .ctrls {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    button {
+      margin-left: 20px;
+    }
+
+    button:first-child {
+      margin-left: 0;
+    }
+  }
 }
