--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -3,11 +3,125 @@
   height: 100vh;
   padding: 120px 40px 40px 40px;
 
-  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
-    margin: 0;
+  .set-7 {
+    padding-right: 40px;
   }
 
-  h3 {
-    margin-bottom: 20px;
+  // ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
+  //   margin: 0;
+  // }
+
+  ::ng-deep .mat-horizontal-stepper-header-container {
+    display: none !important;
+  }
+
+  .mat-stepper-horizontal,
+  .mat-stepper-vertical {
+    background: transparent !important;
+  }
+
+  .usr-auth {
+    margin: 30px 0;
+    text-align: center;
+
+    .access {
+      margin-top: 15px;
+
+      button {
+        margin: 0 5px;
+      }
+    }
+  }
+
+  .teamreg {
+    margin-top: 30px;
+  }
+
+  .usrlfx {
+    display: flex;
+    align-items: center;
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding: 0;
+    }
+
+    * {
+      margin: 0;
+    }
+  }
+
+  .ctrls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 20px;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 10px;
+    }
+
+    button:first-child {
+      margin: 0;
+    }
+
+    mat-spinner {
+      margin-left: 20px;
+    }
+  }
+
+  .collabs {
+    margin-top: 20px !important;
+
+    .collabfield {
+      margin-top: 20px !important;
+    }
+  }
+
+  .upldbtn {
+    width: 100%;
+    height: 270px;
+    border-radius: 5px;
+    background: #f1f1f1;
+    overflow: hidden;
+    // display: inline-flex;
+    // align-items: center;
+    // justify-content: center;
+    border: 1px dashed #1f2325;
+
+    mat-icon {
+      font-size: 70pt;
+      color: rgba($color: #000000, $alpha: 0.7);
+    }
+  }
+
+  .ctrltpc {
+    .set-6:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 10px;
+    }
+
+    .set-12 {
+      margin-top: 20px;
+    }
+
+    button {
+      width: 100%;
+    }
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
