--- a/src/app/college-marathon/create-team/create-team.component.html
+++ b/src/app/college-marathon/create-team/create-team.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12 frmbdy" *ngIf="isDataAvailable">
   <div class="set-7">
     <h1>Lorem Ipsum</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus ex et purus volutpat, vitae varius ligula
@@ -15,10 +15,10 @@
     <div class="set-12 usr-auth" *ngIf="!userAvailable">
       <p>¿Necesitas una cuenta para registrar a tu equipo?</p>
       <p class="access">
-        <button type="button" mat-raised-button color="primary">
+        <button type="button" mat-raised-button color="primary" (click)="quickLogin()">
           <small>Ingresar</small>
         </button>
-        <button type="button" mat-raised-button color="primary">
+        <button type="button" mat-raised-button color="primary" (click)="handleRegistration()">
           <small>Registro</small>
         </button>
       </p>
@@ -27,6 +27,48 @@
     <div class="set-12 teamreg">
       <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true" [selectedIndex]="selectedIndex">
         <mat-step>
+          <form class="sixcombo" [formGroup]="searchCollegeFG">
+            <div class="set-6">
+              <mat-form-field appearance="outline">
+                <mat-label>Estado</mat-label>
+                <mat-select (selectionChange)="onCoverageSelected($event)" formControlName="state">
+                  <mat-option *ngFor="let state of states" [value]="state._id">
+                    <small>{{state.name}}</small>
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <div class="set-6">
+              <mat-form-field appearance="outline">
+                <mat-label>Nombre de tu universidad</mat-label>
+                <input type="text" matInput formControlName="university">
+              </mat-form-field>
+            </div>
+
+            <div class="set-12 ctrls">
+              <button type="button" mat-raised-button color="primary" (click)="searchCollege(searchCollegeFG)"
+                [disabled]="searchCollegeFG.invalid || !userAvailable || isSearching">
+                <small>Buscar universidad</small>
+              </button>
+              <mat-spinner diameter="30" *ngIf="isSearching"></mat-spinner>
+            </div>
+          </form>
+
+          <div class="set-12">
+            <mat-form-field appearance="outline">
+              <mat-label>Selecciona tu universidad</mat-label>
+              <input type="text" placeholder="Selecciona tu universidad..." matInput [formControl]="autocompleteControl"
+                [matAutocomplete]="auto" #autocompleteInput #autocompleteTrigger="matAutocompleteTrigger">
+              <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayLabelFn"
+                (optionSelected)="onSelectUniversity($event)">
+                <mat-option *ngFor="let option of filteredOptions | async; trackBy: trackByIdFn" [value]="option">
+                  <small>{{option.universidad_nombre}}</small>
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+
           <form [formGroup]="registerTeamFG">
             <mat-form-field appearance="outline">
               <mat-label>Nombre del equipo</mat-label>
@@ -35,15 +77,16 @@
 
             <mat-form-field appearance="outline">
               <mat-label>Líder de equipo</mat-label>
-              <input matInput formControlName="owner">
+              <input matInput formControlName="leader">
             </mat-form-field>
           </form>
 
           <div class="set-12 ctrls">
             <button type="button" mat-raised-button color="warn"
-              [disabled]="registerTeamFG.invalid || !userAvailable || submitted" matStepperNext>
+              [disabled]="registerTeamFG.invalid || !userAvailable || submitted" (click)="createTeam()">
               <small>Siguiente</small>
             </button>
+            <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
           </div>
         </mat-step>
 
@@ -53,13 +96,13 @@
               <div class="set-10">
                 <mat-form-field appearance="outline">
                   <mat-label>Invita a tus compañeros de equipo</mat-label>
-                  <input matInput placeholder="Ejemplo: nombre@dominio.com" formControlName="email">
+                  <input matInput placeholder="Ejemplo: nombre@dominio.com" formControlName="searchemail">
                 </mat-form-field>
               </div>
 
               <div class="set-2 txt-right">
                 <button type="button" mat-mini-fab color="primary" (click)="onSearchUser(searchUserFG)"
-                  [disabled]="searchUserFG.invalid || submitted">
+                  [disabled]="searchUserFG.invalid">
                   <mat-icon>person_search</mat-icon>
                 </button>
               </div>
@@ -69,7 +112,7 @@
                   <div [formGroupName]="i">
                     <mat-form-field appearance="outline">
                       <mat-label>Correo electrónico</mat-label>
-                      <input type="text" matInput formControlName="userEmail">
+                      <input type="text" matInput formControlName="email">
                     </mat-form-field>
                   </div>
                 </div>
@@ -81,83 +124,89 @@
             <button type="button" mat-raised-button color="warn" matStepperPrevious>
               <small>Anterior</small>
             </button>
-            <button type="button" mat-raised-button color="warn" matStepperNext>
+            <button type="button" mat-raised-button color="warn" (click)="saveCollaborators()">
               <small>Siguiente</small>
             </button>
           </div>
         </mat-step>
 
         <mat-step>
-          <input type="file" #file (change)="onFileSelected($event)">
-          <button type="button" class="upldbtn" (click)="file.click()">
-            <mat-icon>file_upload</mat-icon>
-            <p><strong>Identificación oficial</strong></p>
-            <p><small>Peso máximo <strong>5MB</strong></small></p>
-            <p><small>Tipo de archivo <strong>.pdf</strong></small></p>
-          </button>
+          <form class="set-12" [formGroup]="userIDFG">
+            <input type="file" #file (change)="onFileSelected($event)">
+            <button type="button" class="upldbtn" (click)="file.click()">
+              <mat-icon>file_upload</mat-icon>
+              <p><strong>Identificación oficial</strong></p>
+              <p><small>Peso máximo <strong>5MB</strong></small></p>
+              <p><small>Tipo de archivo <strong>.pdf</strong></small></p>
+            </button>
+          </form>
 
           <div class="set-12 ctrls">
             <button type="button" mat-raised-button color="warn" matStepperPrevious>
               <small>Anterior</small>
             </button>
-            <button type="button" mat-raised-button color="warn" matStepperNext>
+            <button type="button" mat-raised-button color="warn" (click)="saveLeaderID()">
               <small>Siguiente</small>
             </button>
           </div>
         </mat-step>
 
         <mat-step>
-          <mat-form-field appearance="outline">
-            <mat-label>Cobertura</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let state of coverage" [value]="state._id">
-                <small>{{state.name}}</small>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+          <form class="set-12" [formGroup]="setupFG">
+            <mat-form-field appearance="outline">
+              <mat-label>Cobertura</mat-label>
+              <mat-select formControlName="coverage">
+                <mat-option *ngFor="let state of coverage" [value]="state._id">
+                  <small>{{state.name}}</small>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
 
-          <mat-form-field appearance="outline">
-            <mat-label>Selecciona tu tema</mat-label>
-            <mat-select (selectionChange)="onLayoutSelected($event)">
-              <mat-option *ngFor="let layout of layouts" [value]="layout._id">
-                <small>{{layout.category.name}}</small>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Selecciona tu tema</mat-label>
+              <mat-select (selectionChange)="onLayoutSelected($event)" formControlName="layout">
+                <mat-option *ngFor="let layout of layouts" [value]="layout._id">
+                  <small>{{layout.category.name}}</small>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
 
-          <mat-form-field appearance="outline">
-            <mat-label>Selecciona tu sub tema</mat-label>
-            <mat-select (selectionChange)="onSubLayoutSelected($event)">
-              <mat-option *ngFor="let layout of sublayouts" [value]="layout._id">
-                <small>{{layout.category.name}}</small>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline">
-            <mat-label>Problemática</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let topic of topics" [value]="topic._id">
-                <small>{{topic.title}}</small>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Selecciona tu sub tema</mat-label>
+              <mat-select (selectionChange)="onSubLayoutSelected($event)" formControlName="sublayout">
+                <mat-option *ngFor="let layout of sublayouts" [value]="layout._id">
+                  <small>{{layout.category.name}}</small>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </form>
 
           <div class="set-12 ctrls">
             <button type="button" mat-raised-button color="warn" matStepperPrevious>
               <small>Anterior</small>
             </button>
-            <button type="button" mat-raised-button color="warn" matStepperNext>
+            <button type="button" mat-raised-button color="warn" (click)="saveTeamTopicSetup()">
               <small>Siguiente</small>
             </button>
           </div>
         </mat-step>
 
         <mat-step>
-          <mat-form-field appearance="outline">
-            <mat-label>Título</mat-label>
-            <input matInput>
-          </mat-form-field>
+          <form class="set-12" [formGroup]="topicFG">
+            <mat-form-field appearance="outline">
+              <mat-label>Problemática</mat-label>
+              <mat-select formControlName="topic">
+                <mat-option *ngFor="let topic of topics" [value]="topic._id">
+                  <small>{{topic.title}}</small>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+              <mat-label>Título</mat-label>
+              <input matInput formControlName="title">
+            </mat-form-field>
+          </form>
 
           <div class="set-12 ctrltpc">
             <div class="set-6">
@@ -172,11 +221,11 @@
               </button>
             </div>
 
-            <div class="set-12">
+            <!-- <div class="set-12">
               <button type="button" mat-raised-button color="primary">
                 <small>Carga tu Documento</small>
               </button>
-            </div>
+            </div> -->
           </div>
 
           <div class="set-12 ctrls">
