--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -3,6 +3,10 @@
   height: 100vh;
   padding: 120px 40px 40px 40px;
 
+  .frmbdy {
+    padding-bottom: 40px;
+  }
+
   .set-7 {
     padding-right: 40px;
   }
@@ -113,6 +117,21 @@
 
     button {
       width: 100%;
+    }
+  }
+
+  .sixcombo {
+    .set-6:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 10px;
+    }
+
+    .ctrls {
+      margin: 0;
+      margin-bottom: 20px !important;
     }
   }
 
