--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -118,6 +118,11 @@
     img.full {
       width: 100%;
     }
+
+    video.full {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .crdft {
